[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Other scenes/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Other scenes/UI/Arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/animated_grid_container_plugin/animated_grid_container.gd" type="Script" id=4]
[ext_resource path="res://Fonts/section-title-font.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "fade to clear"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MovesLeftTitle" type="Label" parent="."]
margin_left = 5.0
margin_top = 35.0
margin_right = 132.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Moves left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 144.0
margin_right = 240.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerTitle" type="Label" parent="."]
margin_top = 168.0
margin_right = 192.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Forced moves:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowContainer" type="Container" parent="."]
margin_top = 192.0
margin_right = 72.0
margin_bottom = 270.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
update_time = 0.2

[node name="Arrow" parent="ArrowContainer" instance=ExtResource( 3 )]
margin_right = 192.0
margin_bottom = 96.0

[node name="ContainerTitle2" type="Label" parent="."]
margin_left = 216.0
margin_top = 168.0
margin_right = 408.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Box moves:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxArrowContainer" type="Container" parent="."]
margin_left = 216.0
margin_top = 192.0
margin_right = 408.0
margin_bottom = 256.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
update_time = 0.2

[node name="ColorRect" parent="BoxArrowContainer" instance=ExtResource( 3 )]
margin_right = 192.0
margin_bottom = 96.0

[node name="fader" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="fader"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="fader"]
position = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="fader"]
"anims/fade to clear" = SubResource( 2 )
"anims/fade to white" = SubResource( 3 )
